Show separators in single-tab mode.

Bug: 859585
Test: An active chrome window with one tab should have a white titlebar with a separator between the tab close X and trailing new tab button.
Change-Id: I35c61f0a19f16f9020e4416efe735c2af0978219
Reviewed-on: https://chromium-review.googlesource.com/1128276
Reviewed-by: Allen Bauer <kylixrd@chromium.org>
Commit-Queue: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573321}
Former-commit-id: 93e913c148a1a54557c8b29517a4be2eab7949ea