chrome/browser/ui/views/tabs/tab_controller.h
@@ -74,19 +74,23 @@ class TabController {
                                      const gfx::Point& p,
                                      ui::MenuSourceType source_type) = 0;
 
-  // Returns true if |tab| is the active tab. The active tab is the one whose
+  // Returns whether |tab| is the active tab. The active tab is the one whose
   // content is shown in the browser.
   virtual bool IsActiveTab(const Tab* tab) const = 0;
 
-  // Returns true if the specified Tab is selected.
+  // Returns whether |tab| is selected.
   virtual bool IsTabSelected(const Tab* tab) const = 0;
 
-  // Returns true if the specified Tab is pinned.
+  // Returns whether |tab| is pinned.
   virtual bool IsTabPinned(const Tab* tab) const = 0;
 
-  // Returns true if the specified tab is the first or last one visible.
+  // Returns whether |tab| is the first or last one visible.
   virtual bool IsFirstVisibleTab(const Tab* tab) const = 0;
   virtual bool IsLastVisibleTab(const Tab* tab) const = 0;
+
+  // Returns whether the strip is painting in single-tab mode.  This is true in
+  // a subset of the cases where ther is exactly one tab.
+  virtual bool SingleTabMode() const = 0;
 
   // Returns true if the tab is a part of an incognito profile.
   virtual bool IsIncognito() const = 0;
